# discord-bot-py

./: .Dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  map.csv  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
configs/: log_config.yaml
nginx/: nginx.conf  nginx.conf.example
src/: main.py
src/api/: api.py
src/api/routers/: router.py
src/api/schemas/: __init__.py  schema.py
src/bot/: bot.py
src/bot/commands/: help.py  log.py  member_year.py  move.py  parrot.py  promotion.py
src/bot/events/: archive.py  grant_member_role.py  member_join.py  timeline.py
src/cogs/: check_permissions.py  handler.py  help.py  member_join.py  member_year.py  parrot.py  timeline.py
src/cogs/handler/: handler.py
src/cogs/utils/: selection.py
src/db/: crud.py  database.py  handler.py  models.py
src/db/crud/: __init__.py  archive_channel.py  member_role.py  timeline.py  user.py  utils.py
src/tests/: auto.md  test.py  test2.py
src/tests/bot/: bot.py
src/tests/bot/commands/: check_role.py  test_log.py
src/utils/: constants.py  handlers.py  loggers.py
